Added developer info

--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@ Released   : 20131203
             <p style="text-align: justify;">STDR Simulator is created in way that makes it totally ROS compliant. Every robot and sensor emmits a ROS transformation (tf) and all the measurements are published in ROS topics. In that way, STDR uses all ROS adventages, aiming at easy usage with the world's most state-of-the-art robotic framework. The ROS compliance also suggests that the Graphical User Interface and the STDR Server can be executed in different machines, as well as that STDR can work together with ROS Rviz!</p>
             <br>
             <img src='images/img6.png' width='500px' border='1'/>
+            
+            <h3>Developers</h3>
+            <ul style="text-align: justify;">
+              <li style="text-align: justify;"><a href='https://github.com/etsardou'><b>Manos Tsardoulias</b> (administrator/developer)</a>, PhD in Electrical Engineering <i>(etsardou [at] gmail [dot] com)</i></li>
+              <li style="text-align: justify;"><a href='https://github.com/czalidis'><b>Chris Zalidis</b> (maintainer/developer)</a>, Student in Electrical Engineering (Aristotle University of Thessaloniki) <i>(zalidis [at] gmail [dot] com)</i></li>
+              <li style="text-align: justify;"><a href='https://github.com/athallas'><b>Aris Thallas</b> (developer)</a>, Student in Electrical Engineering (Aristotle University of Thessaloniki) <i>(aris.thallas [at] gmail [dot] com)</i></li>
+            </ul>
           </div>
         </div>
       </div>
