Fixed indentation, added contributors list

--- a/index.html
+++ b/index.html
@@ -199,11 +199,16 @@ Released   : 20131203
             <br>
             <img src='images/img6.png' width='500px' border='1'/>
             
-            <h3>Developers</h3>
+            <h3 style="text-align: justify;">Developers</h3>
             <ul style="text-align: justify;">
               <li style="text-align: justify;"><a href='https://github.com/etsardou'><b>Manos Tsardoulias</b> (administrator/developer)</a>, PhD in Electrical Engineering <i>(etsardou [at] gmail [dot] com)</i></li>
               <li style="text-align: justify;"><a href='https://github.com/czalidis'><b>Chris Zalidis</b> (maintainer/developer)</a>, Student in Electrical Engineering (Aristotle University of Thessaloniki) <i>(zalidis [at] gmail [dot] com)</i></li>
               <li style="text-align: justify;"><a href='https://github.com/athallas'><b>Aris Thallas</b> (developer)</a>, Student in Electrical Engineering (Aristotle University of Thessaloniki) <i>(aris.thallas [at] gmail [dot] com)</i></li>
+            </ul>
+            <br>
+            <h3 style="text-align: justify;">Special thanx to ...</h3>
+            <ul style="text-align: justify;">
+              <li style="text-align: justify;">Waiting for contributors!!</li>
             </ul>
           </div>
         </div>
