Added functionality status

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ Released   : 20131203
                   <img src='images/contribute.png'/ width='60px'>
                 </a>
               </span>
-              <h3>How can I help?</h3><br>
-              <a href='#' id='contribute_id'><p class='button-link'>Ways to contribute</p></a>
+              <h3>Functionality status</h3><br>
+              <a href='#' id='contribute_id'><p class='button-link'>... and ways to contribute</p></a>
             </div>
           </div>
           
@@ -282,17 +282,30 @@ Released   : 20131203
       <div id="content_contribute" style="display:none">
         <div id="welcome" class="container">
           <div class="title">
-            <h2>How can I help?</h2><br>
-            <span class="byline">Ways to contribute</span> </div>
+            <h2>Functionality status</h2><br>
+            <span class="byline">... and ways to contribute</span> </div>
           <div class="content">
             <p style="text-align: justify;">
               As STDR Simulator is still at the 0.1 version, would would appreciate some help! So we encourage you to fork our code and help us improve it. Though we would prefer not to make any large extend changes, as the final code structure is going to change in the next release.  
             </p>
             <p style="text-align: justify;">
-        It would be great if you provide us information about bugs and generally features you would like to see in STDR Simulator. Also you can help us enrich our robot and sensor yaml database	as well as provide us with more map files!
+              It would be great if you provide us information about bugs and generally features you would like to see in STDR Simulator. Also you can help us enrich our robot and sensor yaml database	as well as provide us with more map files!
             </p>
             <p style="text-align: justify;">The bug tracker of STDR Simulator is located here : <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues?direction=desc&labels=&page=1&sort=updated&state=open' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</a></p>
             <p  style="text-align: justify;">You can fork our git repository here: <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator/fork' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/fork</a></p>
+            
+            <br>
+            <h3  style="text-align: justify;">What would you expect to work and it doesn't</h3><br>
+            <ul style="text-align: justify;">
+              <li style="text-align: justify;">Collision detection</li>
+              <li style="text-align: justify;">Other robots perceived as obstacles from sensors</li>
+              <li style="text-align: justify;">Noise in sensors</li>
+              <li style="text-align: justify;">Properties in GUI</li>
+              <li style="text-align: justify;">RFID antennas, thermal and CO2 sensors on robots</li>
+              <li style="text-align: justify;">Battery level in a robot</li>
+            </ul>
+            <br>
+            <p style="text-align: justify;">We hope that all these will work in the next release!</p>
           </div>
         </div>
       </div>
