Changed links to tutorials

--- a/index.html
+++ b/index.html
@@ -258,21 +258,21 @@ Released   : 20131203
               Our tutorials cover the areas of setting up the STDR Simulator, using the console-only interface and using the STDR GUI. 
             </p>
             <ul  style="text-align: justify;">
-        <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/setupsim' target="_blank">Set up STDR Simulator</a></li>
+        <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Set%20up%20STDR%20Simulator' target="_blank">Set up STDR Simulator</a></li>
         <li style="text-align: justify;">Use the command line</li>
         <ul style="text-align: justify;">
-          <li style="text-align: justify;">Basic usage (Start server, load a map, load a robot)</li>
-          <li style="text-align: justify;">Delete a robot, move a robot</li>
-          <li style="text-align: justify;">Aquire sensor measurements</li>
-          <li style="text-align: justify;">Creating robots and sensors with yaml files</li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Basic%20usage' target="_blank">Basic usage (Start server, load a map, load a robot)</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20manipulation' target="_blank">Delete a robot, move a robot</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Sensors%20-%20transformation%20frames' target="_blank">Aquire sensor measurements</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Using%20YAML%20files' target="_blank">Creating robots and sensors with yaml files</a></li>
         </ul>
         <li style="text-align: justify;">Use STDR GUI</li>
         <ul style="text-align: justify;">
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/gui_toolbar' target="_blank">GUI toolbar</a></li>
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/basic_usage' target="_blank">Basic usage (Load a map, add a robot)</a></li>
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/robot_right_click' target="_blank">Robot right click functionalities</a></li>
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/visualizers' target="_blank">Visualizers and visualization status</a></li>
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/robot_creation' target="_blank">Create a robot graphically</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/GUI%20toolbar' target="_blank">GUI toolbar</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Basic%20GUI%20usage' target="_blank">Basic usage (Load a map, add a robot)</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20click%20functionalities' target="_blank">Robot right click functionalities</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Visualizers%20and%20visualization%20status' target="_blank">Visualizers and visualization status</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20creator' target="_blank">Create a robot graphically</a></li>
         </ul>
             </ul>
           </div>
