--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@ Released   : 20131203
             <br>
             <p style="text-align: justify;">STDR Simulator is created in way that makes it totally ROS compliant. Every robot and sensor emmits a ROS transformation (tf) and all the measurements are published in ROS topics. In that way, STDR uses all ROS adventages, aiming at easy usage with the world's most state-of-the-art robotic framework. The ROS compliance also suggests that the Graphical User Interface and the STDR Server can be executed in different machines, as well as that STDR can work together with ROS Rviz!</p>
             <br>
-            <img src='images/img6.png' width='500px' border='1'/>
+
+            <img src='images/img6.png' width='600px' border='1'/>
             
             <h3 style="text-align: justify;">
               STDR Simulator ROS packages
@@ -305,6 +306,39 @@ Released   : 20131203
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Visualizers%20and%20visualization%20status' target="_blank">Visualizers and visualization status</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20creator' target="_blank">Create a robot graphically</a></li>
         </ul>
+            </ul>
+            
+	<p style="text-align: justify;">
+	In addition detailed information about each package can be found in the following ROS wiki pages:
+	</p>
+          <ul style="text-align: justify;">
+          	<li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_simulator'>stdr_simulator</a>, Main page with an architectural overview.
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_server'>stdr_server</a>, Implements synchronization and coordination functionalities of STDR Simulator
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_robot'>stdr_robot</a>, Provides robot, sensor implementation, using nodelets for stdr_server to load them
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_parser'>stdr_parser</a>, Provides a library to STDR Simulator, to parse yaml and xml description files.
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_gui'>stdr_gui</a>, A gui in Qt for visualizing purposes in STDR Simulator.
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_msgs'>stdr_msgs</a>, Provides msgs, services and actions for STDR Simulator.
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_launchers'>stdr_launchers</a>, Launch files, to easily bringup server, robots, guis
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_resources'>stdr_resources</a>, Provides robot and sensor descripiton files for STDR Simulator.
+              </li>
+              <li style="text-align: justify;">
+                <a href='http://wiki.ros.org/stdr_samples'>stdr_samples</a>, Provides sample codes to demonstrate STDR simulator functionalities.
+              </li>
             </ul>
           </div>
         </div>
