--- a/index.html
+++ b/index.html
@@ -253,11 +253,13 @@ Released   : 20131203
             <span class="byline">Ways to get STDR Simulator</span> </div>
           <div class="content">
             <p style="text-align: justify;">
-              There is currently one way to get STDR Simulator and that is by a Github repository. The STDR Github page is <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</a>. To clone the repository execute the following command:
+              There are two ways to get STDR Simulator. The first one by our Github repository. The STDR Github page is <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</a>. To clone the repository execute the following command:
             </p>
             <p class='code-block'>git clone https://github.com/stdr-simulator-ros-pkg/stdr_simulator.git</p>
             <p style="text-align: justify;">To start using STDR please check the Tutorials section.</p>
-            <p style="text-align: justify;">We are in the process of creating the apt-get packages, so they will be available soon.</p>
+            <p style="text-align: justify;">The second way is through ROS official apt-get binaries by executing the following command:</p>
+            <p class='code-block'>sudo apt-get install ros-hydro-stdr-simulator</p>
+            <p style="text-align: justify;">To start using STDR please check the Tutorials section.</p>
           </div>
         </div>
       </div>
