--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@ Released   : 20131203
             </p>
             <ul  style="text-align: justify;">
         <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Set%20up%20STDR%20Simulator' target="_blank">Set up STDR Simulator</a></li>
-        <li style="text-align: justify;">Use the command line</li>
+        <li style="text-align: justify;">Run STDR Simulator</li>
         <ul style="text-align: justify;">
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Basic%20usage' target="_blank">Basic usage (Start server, load a map, load a robot)</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20manipulation' target="_blank">Delete a robot, move a robot</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Sensors%20-%20transformation%20frames' target="_blank">Aquire sensor measurements</a></li>
-          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Using%20YAML%20files' target="_blank">Creating robots and sensors with yaml files</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Using%20YAML%20files' target="_blank">Create robots and sensors using files</a></li>
         </ul>
         <li style="text-align: justify;">Use STDR GUI</li>
         <ul style="text-align: justify;">
@@ -307,6 +307,10 @@ Released   : 20131203
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20click%20functionalities' target="_blank">Robot right click functionalities</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Visualizers%20and%20visualization%20status' target="_blank">Visualizers and visualization status</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Robot%20creator' target="_blank">Create a robot graphically</a></li>
+        </ul>
+        <li style="text-align: justify;">STDR Simulator and other packages</li>
+        <ul style="text-align: justify;">
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Create%20a%20map%20with%20gmapping' target="_blank">Create a map using gmapping</a></li>
         </ul>
             </ul>
             
