--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@ Released   : 20131203
         <li style="text-align: justify;">STDR Simulator and other packages</li>
         <ul style="text-align: justify;">
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Create%20a%20map%20with%20gmapping' target="_blank">Create a map using gmapping</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Using%20turtlebot%20for%20teleoperation' target="_blank">Using turtlebot for teleoperation</a></li>
+          
         </ul>
             </ul>
             
