--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ Released   : 20131203
         <ul style="text-align: justify;">
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Create%20a%20map%20with%20gmapping' target="_blank">Create a map using gmapping</a></li>
           <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Using%20turtlebot%20for%20teleoperation' target="_blank">Using turtlebot for teleoperation</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/Tutorials/Teleop%20with%20teleop_twist_keyboard' target="_blank">Using teleop_twist_keyboard for teleoperation</a></li>
           
         </ul>
             </ul>
