--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ Released   : 20131203
             <br>
             <h3 style="text-align: justify;">Special thanx to ...</h3>
             <ul style="text-align: justify;">
-              <li style="text-align: justify;"><a href='https://github.com/akpappas'>Antonis Pappas</a> for documentation / dissemination</li>
-              <li style="text-align: justify;"><a href='https://github.com/trainman419'>Austin</a> for development in polygon robots support</li>
+              <li style="text-align: justify;"><a href='https://github.com/trainman419'>Austin</a> for development in polygon robots support / odometry publishing / tutorial writing</li>
+              <li style="text-align: justify;"><a href='https://github.com/cottsay'>Scott K Logan</a> for support in YAML-CPP</li>
             </ul>
           </div>
         </div>
@@ -361,7 +361,7 @@ Released   : 20131203
             <span class="byline">... and ways to contribute</span> </div>
           <div class="content">
             <p style="text-align: justify;">
-              As STDR Simulator is still at the 0.1 version, would would appreciate some help! So we encourage you to fork our code and help us improve it. Though we would prefer not to make any large extend changes, as the final code structure is going to change in the next release.  
+              As STDR Simulator is still at the 0.1.3 version, would would appreciate some help! So we encourage you to fork our code and help us improve it. Though we would prefer not to make any large extend changes, as the final code structure is going to change in the next release.  
             </p>
             <p style="text-align: justify;">
               It would be great if you provide us information about bugs and generally features you would like to see in STDR Simulator. Also you can help us enrich our robot and sensor yaml database	as well as provide us with more map files!
@@ -372,7 +372,6 @@ Released   : 20131203
             <br>
             <h3  style="text-align: justify;">What would you expect to work and it doesn't</h3><br>
             <ul style="text-align: justify;">
-              <li style="text-align: justify;">Collision detection</li>
               <li style="text-align: justify;">Other robots perceived as obstacles from sensors</li>
               <li style="text-align: justify;">Noise in sensors</li>
               <li style="text-align: justify;">Properties in GUI</li>
@@ -380,7 +379,7 @@ Released   : 20131203
               <li style="text-align: justify;">Battery level in a robot</li>
             </ul>
             <br>
-            <p style="text-align: justify;">We hope that all these will work in the next release!</p>
+            <p style="text-align: justify;">We hope that all these will work in the next releases!</p>
           </div>
         </div>
       </div>
