--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Released   : 20131203
             <p style="text-align: justify;">
               Our tutorials cover the areas of setting up the STDR Simulator, using the console-only interface and using the STDR GUI. 
             </p>
-            <p>The tutorials can be found here : <a href="http://wiki.ros.org/stdr_simulator/Tutorials">http://wiki.ros.org/stdr_simulator/Tutorials</a></p>
+            <p style="text-align: justify;">The tutorials can be found here : <a href="http://wiki.ros.org/stdr_simulator/Tutorials">http://wiki.ros.org/stdr_simulator/Tutorials</a></p>
             
             
 	<p style="text-align: justify;">
