--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ Released   : 20131203
             <ul style="text-align: justify;">
               <li style="text-align: justify;"><a href='https://github.com/trainman419'>Austin</a> for development in polygon robots support / odometry publishing / tutorial writing</li>
               <li style="text-align: justify;"><a href='https://github.com/cottsay'>Scott K Logan</a> for support in YAML-CPP</li>
+              <li style="text-align: justify;"><a href='https://github.com/taketwo'>Sergey Alexandrov</a> for code pull request</li>
             </ul>
           </div>
         </div>
@@ -337,10 +338,10 @@ Released   : 20131203
             <span class="byline">... and ways to contribute</span> </div>
           <div class="content">
             <p style="text-align: justify;">
-              As STDR Simulator is still at the 0.1.3 version, would would appreciate some help! So we encourage you to fork our code and help us improve it. Though we would prefer not to make any large extend changes, as the final code structure is going to change in the next release.  
+              As STDR Simulator is still at the 0.2 version, would would appreciate some help! So we encourage you to fork our code and help us improve it. Though we would prefer not to make any large extend changes, as the final code structure is going to change in the next release.  
             </p>
             <p style="text-align: justify;">
-              It would be great if you provide us information about bugs and generally features you would like to see in STDR Simulator. Also you can help us enrich our robot and sensor yaml database	as well as provide us with more map files!
+              It would be great if you provide us information about bugs and generally features you would like to see in STDR Simulator. Also you can help us enrich our robot and sensor yaml database as well as provide us with more map files!
             </p>
             <p style="text-align: justify;">The bug tracker of STDR Simulator is located here : <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues?direction=desc&labels=&page=1&sort=updated&state=open' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</a></p>
             <p  style="text-align: justify;">You can fork our git repository here: <a href='https://github.com/stdr-simulator-ros-pkg/stdr_simulator/fork' target="_blank">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/fork</a></p>
@@ -351,7 +352,6 @@ Released   : 20131203
               <li style="text-align: justify;">Other robots perceived as obstacles from sensors</li>
               <li style="text-align: justify;">Noise in sensors</li>
               <li style="text-align: justify;">Properties in GUI</li>
-              <li style="text-align: justify;">RFID antennas, thermal and CO2 sensors on robots</li>
               <li style="text-align: justify;">Battery level in a robot</li>
             </ul>
             <br>
